@startuml

title MapareVote - Class Diagram

package M {
    class Vote {
        int id
        String label
        LocalDate startDate
        LocalDate endDate
        String algo
        Boolean anonymous
        Boolean deleted
        Boolean intermediaryResult
        int maxChoices
        LocalDate lastCalculated
        boolean pendingResult
    }
    
    class Choice {
        int id
        int weight
        List names
    }
    
    class Ballot {
        int id
        LocalDateTime date
    }
    
    class User {
        int id
        String email
        String lastname
        String firstname
        byte passwordHash
        byte salt
        String emailToken
        Boolean confirmed
        Boolean admin
        Boolean banned
    }
    
    class VotedVote {
        String token
    }
    
    class BallotChoice {
        int weight
    }
    class VoteResult {
        int value
    }
}


Choice "1..*" --* "1" Vote
Ballot "*" --* "1" Vote
Ballot "1" -- "*" BallotChoice
BallotChoice "*" -- "1" Choice
Ballot "*" -- "0..1" User:Voter
Vote "*" --- "1" User:Votemaker
Vote "*" -- "*" User:Member
Vote "1"-- "*" VotedVote
VotedVote "*" -- "1" User
VoteResult "1" -- "1" Choice

@enduml
